<resources>
    <item name="fastadapter_item_adapter" type="id"/>
    <string name="app_name">Weather</string>
    <string name="cancel_label">Cancel</string>
    <string name="store_label">Store</string>
    <string name="license_title">License</string>
    <string name="libraries_title">Libraries &amp; Resources</string>
    <string name="developer_info_title">Developer Info</string>
    <string name="design_api_title">Design &amp; API</string>
    <string name="application_info_title">Application Info</string>
    <string name="application_info_text">
        <![CDATA[
            <p>
            <b>Weather application</b>
            <br/>
            Version: %1$s
            <br/>
            This application is open source at <br/><a href="https://github.com/cuonghuynhsss/WeatherForecast">https://github.com/cuonghuynhsss/WeatherForecast</a></p>
        ]]>
    </string>
    <string name="developer_info_text" translatable="false">
        <![CDATA[
            <p>Huynh Chi Cuong <a href="https://twitter.com/cuonghuynh">@cuonghuynhsss</a></p>
        ]]>
    </string>
    <string name="design_api_text" translatable="false">
        <![CDATA[
            <p>
            <a href="https://www.uplabs.com/posts/weather-app-freebie">Weather App </a> by CuongHuynh
            <br/>
            <a href="https://lottiefiles.com/user/26177">Lottie & Icon files</a> by Figma
            <br/>
            <a href="http://openweathermap.org/">OpenWeatherMap</a> Weather API
            </p>
        ]]>
    </string>
    <string name="libraries_text" translatable="false">
        <![CDATA[
           <p>
            <a href="https://github.com/JakeWharton/butterknife">ButterKnife</a> - Apache-2.0
            <br/>
            <a href="https://github.com/square/retrofit">Retrofit</a> - Apache-2.0
            <br/>
            <a href="https://github.com/ReactiveX/RxAndroid">RxAndroid</a> - Apache-2.0
            <br/>
            <a href="https://github.com/objectbox/objectbox-java">ObjectBox</a> - Apache-2.0
            <br/>
            <a href="https://github.com/mikepenz/FastAdapter">FastAdapter</a> - Apache-2.0
            <br/>
            <a href="https://github.com/bumptech/glide">Glide</a> - Apache-2.0
            <br/>
            <a href="https://github.com/airbnb/lottie-android">Lottie-Android</a> - Apache-2.0
            <br/>
            <a href="https://github.com/MiguelCatalan/MaterialSearchView">MaterialSearchView</a> - Apache-2.0
            <br/>
            <a href="https://github.com/pwittchen/prefser">Prefser</a> - Apache-2.0
            <br/>
            <a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart</a> - Apache-2.0
            <br/>
            <a href="https://github.com/InflationX/Calligraphy">Calligraphy</a> - Apache-2.0
            <br/>
            <a href="https://github.com/google/material-design-icons">Material design icons</a> - Creative Common Attribution 4.0 International License
           </p>

        ]]>
</string>
    <string name="license_text" translatable="false">
        <![CDATA[
            <p>Copyright 2023 Cuong Huynh</p>

    </string>
    <string name="libraries_text" translatable="false">
        <![CDATA[
           <p>
            <a href="https://github.com/JakeWharton/butterknife">ButterKnife</a> - Apache-2.0
            <br/>
            <a href="https://github.com/square/retrofit">Retrofit</a> - Apache-2.0
            <br/>
            <a href="https://github.com/ReactiveX/RxAndroid">RxAndroid</a> - Apache-2.0
            <br/>
            <a href="https://github.com/objectbox/objectbox-java">ObjectBox</a> - Apache-2.0
            <br/>
            <a href="https://github.com/mikepenz/FastAdapter">FastAdapter</a> - Apache-2.0
            <br/>
            <a href="https://github.com/bumptech/glide">Glide</a> - Apache-2.0
            <br/>
            <a href="https://github.com/airbnb/lottie-android">Lottie-Android</a> - Apache-2.0
            <br/>
            <a href="https://github.com/MiguelCatalan/MaterialSearchView">MaterialSearchView</a> - Apache-2.0
            <br/>
            <a href="https://github.com/pwittchen/prefser">Prefser</a> - Apache-2.0
            <br/>
            <a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart</a> - Apache-2.0
            <br/>
            <a href="https://github.com/InflationX/Calligraphy">Calligraphy</a> - Apache-2.0
            <br/>
            <a href="https://github.com/google/material-design-icons">Material design icons</a> - Creative Common Attribution 4.0 International License
           </p>

        ]]>
</string>
    <string name="current_label">Current</string>
    <string name="humidity_label">Humidity</string>
    <string name="wind_label">Wind</string>
    <string name="next_4_days_hourly">Next 4 Days/Hourly</string>
    <string name="next_15_days_label">Next 15 Days</string>
    <string name="search_for_a_city_label">Search for a city</string>
    <string name="zero_label">0%d</string>
    <string name="wind_unit_label">%.0f km/hr</string>
    <string name="openweathermap_api_key_label">OpenWeatherMap API Key</string>
    <string name="api_key_description">For using application you should provide API key. It is free. Please open link below and create account. After that you can get API key.</string>
    <string name="get_api_key_label">Get API Key</string>
    <string name="api_key_label">API Key</string>
    <string name="english_label" translatable="false">English</string>
    <string name="viet_nam_label" translatable="false">Việt Nam</string>
    <string name="search_label">Search</string>
    <string name="no_internet_message">Please check internet connection</string>
    <string name="no_city_found_message">No city found with this name</string>
    <string name="invalid_api_key_message">API key is invalid. Wait for next update</string>
    <string name="network_exception_message">Network connection problem</string>
    <string name="retry_label">Retry</string>
    <string name="ok_label">OK</string>
    <string name="night_mode_label">Night Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="api_map_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDH32jqEJwVA0a_M3o-rxbWQOurmap5beQ</string>
<!--    <resources>-->


<!--        &lt;!&ndash; Strings related to login &ndash;&gt;-->
<!--        <string name="prompt_email">Email</string>-->
<!--        <string name="prompt_password">Password (optional)</string>-->
<!--        <string name="action_sign_in">Sign in or register</string>-->
<!--        <string name="action_sign_in_short">Sign in</string>-->
<!--        <string name="action_sign_out">Sign out</string>-->
<!--        <string name="error_invalid_email">This email address is invalid</string>-->
<!--        <string name="error_invalid_password">This password is too short</string>-->
<!--        <string name="error_incorrect_password">This password is incorrect</string>-->
<!--        <string name="error_field_required">This field is required</string>-->
<!--        <string name="resend_verification_email">Resend Verification Email</string>-->
<!--        <string name="forgot_password">Forgot Password</string>-->
<!--        <string name="register">Register</string>-->
<!--        <string name="sign_in">Sign In</string>-->
<!--        <string name="password">Password</string>-->
<!--        <string name="tabian_consulting_logo">Tabian Consulting Logo</string>-->
<!--        <string name="email_registration">Email Registration</string>-->
<!--        <string name="email">Email</string>-->
<!--        <string name="confirm_password">Confirm Password</string>-->

<!--        &lt;!&ndash; Firestore Strings &ndash;&gt;-->
<!--        <string name="collection_users">Users</string>-->
<!--        <string name="collection_chatrooms">Chatrooms</string>-->
<!--        <string name="collection_chat_messages">Chat Messages</string>-->
<!--        <string name="collection_chatroom_user_list">User List</string>-->
<!--        <string name="collection_user_locations">User Locations</string>-->

<!--        &lt;!&ndash; Intent extras &ndash;&gt;-->
<!--        <string name="intent_chatroom">intent_chatroom</string>-->
<!--        <string name="intent_user_list">intent_user_list</string>-->
<!--        <string name="intent_user_locations">intent_user_locations</string>-->
<!--        <string name="intent_location">intent_location</string>-->

<!--        &lt;!&ndash; Service and Broadcasts &ndash;&gt;-->
<!--        <string name="gps_location">gps_location</string>-->


<!--        &lt;!&ndash; Fragments Names &ndash;&gt;-->
<!--        <string name="fragment_user_list">User List</string>-->
<!--        <string name="fragment_image_list">Image List</string>-->

<!--        &lt;!&ndash; Other Strings &ndash;&gt;-->
<!--        <string name="action_create_chatroom">Create Chatroom</string>-->
<!--        <string name="action_leave_chatroom">Leave chatroom</string>-->
<!--        <string name="action_chatroom_user_list">User list</string>-->
<!--        <string name="action_profile">Profile</string>-->



<!--</resources>-->
</resources>